--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@ body {
   position: relative;
   touch-action: manipulation;
   -webkit-overflow-scrolling: touch;
-  overflow: hidden;
 }
 
 code {
@@ -51,4 +50,33 @@ a {
 
 ol ul {
   list-style-type: disc;
+}
+
+.App {
+  text-align: center;
+}
+
+#real{
+  width: 2000px;
+  height: 1000px;
+  overflow: visible;
+}
+
+#real .css-tonwsg-MuiDataGrid-root{
+  border: none;
+}
+
+#real .css-1w5m2wr-MuiDataGrid-virtualScroller{
+  width: fit-content !important;
+  height: fit-content !important;
+  margin-top: 56px !important;
+  overflow: visible !important;
+}
+
+#real .MuiDataGrid-main{
+  overflow: visible;
+}
+
+#real .MuiDataGrid-root{
+  height: 1000px;
 }
